--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@
                 opacity: 0;
             }
         }
+        h1{
+        font-style: normal;
+        color: antiquewhite;
+    
+    }
+    .translucent-box {
+        width: auto;
+        height: auto;
+        background: rgba(0, 0, 0, 0.5); /* Black with 50% opacity */
+        color: white;
+        padding: 20px;
+        text-align: center;
+        border-radius: 10px
+    }
     </style>
 </head>
 
